--- a/package.json
+++ b/package.json
@@ -3,20 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 80",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.81.5",
+    "easy-peasy": "^6.0.5",
     "framer-motion": "^12.18.1",
-    "i18next": "^25.2.1",
-    "i18next-browser-languagedetector": "^8.2.0",
     "next": "15.3.3",
+    "next-i18next": "^15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-i18next": "^15.5.3",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
@@ -24,6 +23,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
