--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.81.5",
+    "critters": "^0.0.25",
     "easy-peasy": "^6.0.5",
     "framer-motion": "^12.18.1",
     "next": "15.3.3",
@@ -25,7 +26,6 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
